# pgn_parser

./: Cargo.toml  README.md  license_header
benches/: benchmarks.rs  caro_kann_study.pgn
sample_games/: 0000-r.pgn  0000.pgn  0001-r.pgn  0001.pgn  0002-r.pgn  0002.pgn  0003-r.pgn  0003.pgn  0004-r.pgn  0004.pgn  0005-r.pgn  0005.pgn  0006-r.pgn  0006.pgn  0007-r.pgn  0007.pgn  0008-r.pgn  0008.pgn  0009-r.pgn  0009.pgn  0010-r.pgn  0010.pgn  0011-r.pgn  0011.pgn  0012-r.pgn  0012.pgn  0013-r.pgn  0013.pgn  0014-r.pgn  0014.pgn  0015-r.pgn  0015.pgn  0016-r.pgn  0016.pgn  0017-r.pgn  0017.pgn  README.md  fg_01.pgn  fg_01_nv_nc.pgn  full_game_xi.pgn  (+1 more)
src/: comment.rs  game.rs  game_formatter.rs  game_formatter_tests.rs  lib.rs  main.rs  pgn_formatter.rs  pgn_tokenizer.rs  pgn_tree_builder.rs  tests.rs  tokenizer.rs
tests/: game_formatter_tests.rs  pgn_formatter_tests.rs  pgn_tree_builder_tests.rs
